--- a/module/Home/view/home_v2/index/index.phtml
+++ b/module/Home/view/home_v2/index/index.phtml
@@ -4,11 +4,24 @@
             <div class="container container-top-seach row">
                 <div class="col-md-3 col-sm-3 col-xs-3 top-search-location">
                     <i id="mbn-top-search-city-icon" class="fa fa-map-marker marker"></i>
-                    <select data-gtm-event="mbn-event-link" data-gtm-category="mbn-search"
-                            data-gtm-action="mbn-city-dropdown"
-                            data-bind="chosen: { source: Cities, selectedValue: CityId, displayProp: 'Name', valueProp: 'CityId', styleProp: 'Style', chosenOption: { disable_search: true } }"
-                            class="hide">
+<!--                    <select data-gtm-event="mbn-event-link" data-gtm-category="mbn-search"-->
+<!--                            data-gtm-action="mbn-city-dropdown"-->
+<!--                            data-bind="chosen: { source: Cities, selectedValue: CityId, displayProp: 'Name', valueProp: 'CityId', styleProp: 'Style', chosenOption: { disable_search: true } }"-->
+<!--                            class="hide">-->
+<!--                    </select>-->
+
+                    <select name="" id="" class="chosen-select mbn-search">
+                        <option value="">1212</option>
+                        <option value="">1212</option>
+                        <option value="">1212</option>
+                        <option value="">1212</option>
+                        <option value="">1212</option>
+                        <option value="">1212</option>
+                        <option value="">1212</option>
+                        <option value="">1212</option>
+                        <option value="">1212</option>
                     </select>
+
 
                 </div>
 
@@ -148,21 +161,7 @@
                     </div>
                     <div class="clearfix"></div>
                     <div id="owl-carousel-special" class="owl-carousel">
-                        <div class="item">
-                            <a data-gtm-event="mbn-event-link" data-gtm-category="mbn-listing-sptop"
-                               data-gtm-action="listing-sptop-posting-id-39498618"
-                               href="/biet-thu-villa-penthouse-quan-7-l5915-c3205/xuat-canh-ban-gap-biet-thu-huynh-tan-phat-quan-7-gia-cuc-tot-id39498618"
-                               title="Xuất cảnh bán gấp biệt thự Huỳnh Tấn Phát Quận 7 giá cực tốt">
-                                <div class="owl-item-image">
-                                    <img class="lazyOwl" width="136" height="102"
-                                         data-src="https://cdn.muaban.net/cdn/images/thumb-list/201707/17/226/f7db533976ac4798999a5fd945937f6a.jpg">
-                                </div>
-                                <span class="owl-item-title">Xuất cảnh bán gấp biệt thự Huỳnh Tấn Phát Quận 7 giá cực tốt</span>
-                                <span class="owl-item-price">12 tỷ </span>
-                            </a>
-                        </div>
-
-
+                        <?php require_once TEMPLATE_PATH . DS . 'home_v2' . DS . 'inc' . DS . 'content-vip.php';?>
                     </div>
 
                     <a data-gtm-event="mbn-event-all" data-gtm-category="mbn-listing-sptop-mobile"
@@ -220,31 +219,7 @@
 
             </div>
             <div class="mbn-box-list">
-                <div class="mbn-box-list-content">
-                    <span class="mbn-label-VIPS"></span>
-
-                    <a class="mbn-image" title="Bán nhà BT phố 2 MT (trước và sau công viên)"
-                       href="https://muaban.net/nha-mat-tien-quan-go-vap-l5920-c3201/ban-nha-bt-pho-2-mt-truoc-va-sau-cong-vien--id39564387">
-                        <img title="Bán nhà BT phố 2 MT (trước và sau công viên)"
-                             alt="Bán nhà BT phố 2 MT (trước và sau công viên)"
-                             data-original="https://cdn.muaban.net/cdn/images/thumb-list/201707/20/042/9e25253574c347cc84df15d86eae7eec.jpg"
-                             src="https://muaban.net/Content/images/1x1.gif" width="120" height="90"/>
-                    </a>
-                    <a title="Bán nhà BT phố 2 MT (trước và sau công viên)"
-                       href="https://muaban.net/nha-mat-tien-quan-go-vap-l5920-c3201/ban-nha-bt-pho-2-mt-truoc-va-sau-cong-vien--id39564387">
-                        <div class="mbn-content">
-                            <h2 class="mbn-title">Bán nhà BT phố 2 MT (trước và sau công viên)</h2>
-                            <span class="mbn-price">6 tỷ 500 triệu</span>
-                            <span class="mbn-address"><span class="icon icon-map5"></span> Quận Gò Vấp, TP.HCM</span>
-                            <span class="mbn-date">23/07/2017</span>
-
-                            <span class="mbn-item-summary">Nhà biệt thự phố 2 MT đường số 59, P. 14, QGV, HCM (MT trước và sau đêu có công viên).&#10;Dt: 6 x 12m (Hướng chính đông)&#10;1 trệt + 1 lửng + 3 lầu (1 Pk + 1 p bếp + 1 p. Karaoke + 4 p. Ngủ + 1 p. Xông hơi + 1 p. Thờ + 2 sân thượng trước và sau)&#10;Nhà xây đựng</span>
-
-
-                        </div>
-                    </a>
-                    <div class="clearfix"></div>
-                </div>
+                <?php require_once TEMPLATE_PATH . DS . 'home_v2' . DS . 'inc' . DS . 'content-lease.php';?>
 
 
                 <div class="borderTop"></div>
@@ -313,22 +288,8 @@
                     </div>
                     <div class="clearfix"></div>
                     <ul id="mbn-classified-ads" class="hidden-xs">
-                        <li>
-                            <a data-gtm-event="mbn-event-link" data-gtm-category="mbn-listing-spright"
-                               data-gtm-action="listing-spright-posting-id-39392536"
-                               title="Nhượng lại quyền kinh doanh lô đất 4.500m2 ngay trung tâm TP.Cần Thơ"
-                               href="/sang-nhuong-khac-ho-chi-minh-l59-c3309/nhuong-lai-quyen-kinh-doanh-lo-dat-4-500m2-ngay-trung-tam-tp-can-tho-id39392536">
-                                <img class="spright-image"
-                                     title="Nhượng lại quyền kinh doanh lô đất 4.500m2 ngay trung tâm TP.Cần Thơ"
-                                     alt="Nhượng lại quyền kinh doanh lô đất 4.500m2 ngay trung tâm TP.Cần Thơ"
-                                     data-original="https://cdn.muaban.net/cdn/images/thumb-list/201707/13/117/58519d4889904d9bb10bd0d112c0857f.jpg"
-                                     src="https://muaban.net/Content/images/1x1.gif" width="100" height="75"/>
-                                <div class="spright-content">
-                                    <h2>Nhượng lại quyền kinh doanh lô đất 4.500m2 ngay trung tâm TP.Cần Thơ</h2>
-                                    <span class="spright-price"></span>
-                                </div>
-                            </a>
-                        </li>
+                        <?php echo $this->sidebarReal($this->arrParam);?>
+
 
                     </ul>
                     <div id="owl-carousel-ads" class="owl-carousel visible-xs"></div>
@@ -409,22 +370,9 @@
                     </div>
                     <div class="clearfix"></div>
                     <ul>
-                        <li>
-                            <a
-                                    title="Thủ tục và mức thuế phải đóng khi chuyển đổi mục đích sử dụng đất nông nghiệp sang đất ở"
-                                    href="https://blog.muaban.net/thu-tuc-va-muc-thue-phai-dong-khi-chuyen-doi-muc-dich-su-dung-dat-nong-nghiep-sang-dat-o/">
-                                <img class="spright-image"
-                                     title="Thủ tục và mức thuế phải đóng khi chuyển đổi mục đích sử dụng đất nông nghiệp sang đất ở"
-                                     alt="Thủ tục và mức thuế phải đóng khi chuyển đổi mục đích sử dụng đất nông nghiệp sang đất ở"
-                                     data-original="https://blog.muaban.net/wp-content/uploads/2017/07/r-150x150.jpg"
-                                     src="https://muaban.net/Content/images/1x1.gif" width="100" height="75"/>
-                                <div class="spright-content">
-                                    <h2>Thủ tục và mức thuế phải đóng khi chuyển đổi mục đích sử dụng đất nông nghiệp
-                                        sang đất ở</h2>
-                                    <span class="spright-price">22/07/2017</span>
-                                </div>
-                            </a>
-                        </li>
+
+                        <?php echo $this->blkSlideNews();?>
+
 
                     </ul>
                     <div class="clearfix"></div>
