--- a/block/BlkSlideNews/default.phtml
+++ b/block/BlkSlideNews/default.phtml
@@ -1,40 +1,36 @@
-<?php
-$xhtml                  = '';
-$i                      = 1;   
-$urlHelper              = $this->getView()->plugin('url');
-$xhtmlTinSlide          = '';
-foreach ($this->_data['data']  as $key =>$item) {
-    
-    $title          = $item['title'];
-    $date_time      = $item['date_time'];
-    $image          = (!empty($item['images']))  ? UPLOAD_URL .'/news/'.$item['images'] :  TEMPLATE_URL .'/admin/images/NoImage.jpg';
+<?php $urlHelper = $this->getView()->plugin('url'); ?>
+<?php if (!empty($this->_data['data'])): ?>
+    <?php foreach ($this->_data['data'] as $key => $item):
+        $title = $item['title'];
+        $date_time = $item['date_time'];
+        $image = (!empty($item['images'])) ? UPLOAD_URL . '/news/' . $item['images'] : TEMPLATE_URL . '/admin/images/NoImage.jpg';
 
-    $urlDetail   = $urlHelper('DetailNewsRoute',array(
-            'controller'        => 'news',
-            'action'            => 'detail',
-            'namecategory'      => \ZendVN\Url\FriendlyLink::filter($item['name_category']),
-            'title'             => \ZendVN\Url\FriendlyLink::filter($title),
-            'cid'               => $item['cat_id'],
-            'id'                => $item['id'],
-            'extension'         => 'html',
-    ));
+        $urlDetail = $urlHelper('DetailNewsRoute', array(
+            'controller' => 'news',
+            'action' => 'detail',
+            'namecategory' => \ZendVN\Url\FriendlyLink::filter($item['name_category']),
+            'title' => \ZendVN\Url\FriendlyLink::filter($title),
+            'cid' => $item['cat_id'],
+            'id' => $item['id'],
+            'extension' => 'html',
+        ));
+        ?>
+        <li>
+            <a data-gtm-event="mbn-event-link" data-gtm-category="mbn-listing-spright"
+               data-gtm-action="listing-spright-posting-id-<?php echo $item['id']?>"
+               title="<?php echo $title ?>"
+               href="<?php echo $urlDetail ?>">
+                <img class="spright-image"
+                     title="<?php echo $title ?>"
+                     alt="<?php echo $title ?>"
+                     data-original="<?php echo $image ?>"
+                     src="https://muaban.net/Content/images/1x1.gif" width="100" height="75"/>
+                <div class="spright-content">
+                    <h2><?php echo $title ?></h2>
+                    <span class="spright-price"><?php echo $date_time?></span>
+                </div>
+            </a>
+        </li>
+    <?php endforeach ?>
+<?php endif ?>
 
-    $xhtmlTinSlide .= '<tr>
-                			<td>
-                				<div class="dv-item-ttbds">
-                					<div class="dv-img-ttbds">
-                						<a title="'.$title.'" href="' . $urlDetail . '">
-                							<img alt="'.$title.'" src="' . $image . '" />
-                						</a>
-                					</div>
-                					<div class="dv-txt-ttbds">
-                						<a title="'.$title.'" class="a-title" href="' . $urlDetail . '">'.$title.'</a>
-                						<p style="color: #0774B9;">' . $item['name_category'] . '</p>
-                						<p><i class="ico-sty i-time-bla"></i>' . $date_time . '</p>
-                					</div>
-                				</div>
-                			</td>
-                		</tr>';
-}
-
-echo $xhtmlTinSlide;
